# postal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  mise.toml  mix.exs
.github/workflows/: build-nifs.yml  ci.yml  release.yml
docs/superpowers/specs/: 2026-04-07-precompiled-nifs-design.md
lib/: postal.ex
lib/postal/: error.ex  native.ex
lib/postal/native/: env.ex
native/postal_nif/: Cargo.toml
native/postal_nif/src/: lib.rs
test/: postal_nif_error_test.exs  postal_test.exs
